@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,6 +9,7 @@
  *     IBM Corporation - initial API and implementation
  *     <sgandon@nds.com> - Fix for bug 109389 - IntegerFieldEditor
  *     does not fire property change all the time
+ *     Jan-Ove Weichel <janove.weichel@vogella.com> - Bug 475879
  *******************************************************************************/
 package org.eclipse.jface.preference;
 
@@ -27,8 +28,8 @@ public class IntegerFieldEditor extends StringFieldEditor {
     private static final int DEFAULT_TEXT_LIMIT = 10;
 
     /**
-     * Creates a new integer field editor
-     */
+    * Creates a new integer field editor
+    */
     protected IntegerFieldEditor() {
     }
 
@@ -70,9 +71,8 @@ public class IntegerFieldEditor extends StringFieldEditor {
     public void setValidRange(int min, int max) {
         minValidValue = min;
         maxValidValue = max;
-        setErrorMessage(JFaceResources.format(
-        		"IntegerFieldEditor.errorMessageRange", //$NON-NLS-1$
-        		new Object[] { new Integer(min), new Integer(max) }));
+		setErrorMessage(JFaceResources.format("IntegerFieldEditor.errorMessageRange", //$NON-NLS-1$
+				Integer.valueOf(min), Integer.valueOf(max)));
     }
 
     @Override
@@ -127,7 +127,7 @@ public class IntegerFieldEditor extends StringFieldEditor {
 	protected void doStore() {
         Text text = getTextControl();
         if (text != null) {
-            Integer i = new Integer(text.getText());
+			Integer i = Integer.valueOf(text.getText());
             getPreferenceStore().setValue(getPreferenceName(), i.intValue());
         }
     }
@@ -140,6 +140,6 @@ public class IntegerFieldEditor extends StringFieldEditor {
      *   contain a parsable integer
      */
     public int getIntValue() throws NumberFormatException {
-        return new Integer(getStringValue()).intValue();
+		return Integer.valueOf(getStringValue()).intValue();
     }
 }
