@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2013 IBM Corporation and others.
+ * Copyright (c) 2003, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,12 +7,11 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Wedia - Joel DRIGO (joel.drigo@wedia-group.com): Bug 470866
  *******************************************************************************/
 package org.eclipse.jface.preference;
 
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.DisposeEvent;
-import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
@@ -214,12 +213,7 @@ public class ScaleFieldEditor extends FieldEditor {
                     valueChanged();
                 }
             });
-            scale.addDisposeListener(new DisposeListener() {
-                @Override
-				public void widgetDisposed(DisposeEvent event) {
-                    scale = null;
-                }
-            });
+            scale.addDisposeListener(event -> scale = null);
         } else {
             checkParent(scale, parent);
         }
@@ -345,9 +339,18 @@ public class ScaleFieldEditor extends FieldEditor {
         int newValue = scale.getSelection();
         if (newValue != oldValue) {
             fireStateChanged(IS_VALID, false, true);
-            fireValueChanged(VALUE, new Integer(oldValue),
-                    new Integer(newValue));
+			fireValueChanged(VALUE, Integer.valueOf(oldValue), Integer.valueOf(newValue));
             oldValue = newValue;
         }
     }
+
+	/**
+	 * Bug 470866 fix
+	 */
+	@Override
+	public void setEnabled(boolean enabled, Composite parent) {
+		super.setEnabled(enabled, parent);
+		getScaleControl().setEnabled(enabled);
+	}
+
 }
